--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,4 +1,15 @@
 .nav-bar {
     display: flex;
     justify-content: space-between;
+    background-color: #e7eaf6;
+    padding: 2%;
+}
+
+.links {
+    display: flex;
+    gap: 3vw
+}
+
+.logo, .links {
+    margin: 0 2% 0 2%;
 }
