--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,11 @@ body {
     padding: 0;
     background-color: #e7eaf6;
 }
+
+main {
+    padding-top: 70px;
+}
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
