--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,20 +1,47 @@
 .nav-bar {
     position: fixed;
-    width: 100%;
+    right: 0;
+    left: 0;
     top: 0;
     z-index: 999;
     display: flex;
     justify-content: space-between;
     background-color: white;
-    padding: 3vh;
+    padding: 2vh 4vw 2vh 4vw;  
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.logo {
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .links {
     display: flex;
-    gap: 3vw;
+    align-items: center;
+    gap: 30px
 }
 
-.logo, .links {
-    margin: 0 4% 0 2%;
+
+.cart-cont {
+    display: flex;
+    align-items: center;
+    gap: 5px
 }
 
+.cart-icon {
+    background-color: rgba(255, 0, 0, 0.634);
+    border-radius: 50%;
+    color: white;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    line-height: 24px;
+    transform: translateY(-6px);
+    
+}
