--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -2,9 +2,79 @@
     width: 50px;
     height: auto;
     padding: 5px;
+    margin-right: 10px;
 }
 
 .cart-img-div {
     display: flex;
     align-items: center ;
+}
+
+.cart-title, .summary > :first-child  {
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.cart-card {
+    margin: 100px 100px;
+    background-color: white;
+    display:flex;
+    border-radius: 15px;
+    box-shadow: 2px 2px 6px #64728d;
+}
+
+.items {
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    flex: 2
+}
+
+.summary {
+    background-color: rgb(246, 246, 246);
+    padding: 2%;
+    flex: 1;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.dec-btn {
+    margin-right: 11px;
+}
+
+.inc-btn {
+    margin-left: 4px;   
+}
+
+tr > *:not(:first-child) {
+    text-align: left;
+}
+
+.total-cell {
+    min-width: 60px;
+}
+
+.qty-cell {
+    display: inline-block;
+    min-width: 20px;
+}
+
+.summary-info {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px
+}
+
+.summary-info > * {
+    display: flex;
+    justify-content: space-between;
+}
+
+.checkout-btn {
+    background-color: white;
+}
+
+.summary > :first-child {
+    font-weight: 600;
 }
