--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -2,10 +2,20 @@
     max-width: 1200px;
     background-color: #e7eaf6;
     margin: auto;
-    padding: 5%;
+    padding: 100px 5% 5% 5%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, auto));
     gap: 5vh;
+}
+
+@media (max-width: 666px) {
+    .item-card {
+        max-width: 350px;
+    }
+    .shop-grid {
+        justify-content: center;
+    }
+    
 }
 
 .item-title {
