--- a/src/css/home.css
+++ b/src/css/home.css
@@ -20,7 +20,7 @@
 }
 
 .carousel img.active {
-  opacity: 1;
+  opacity: 0.7;
   z-index: 1;
 }
 
@@ -40,4 +40,33 @@
         transform: translateX(-60%);
         overflow-x: visible;
     }
+}
+
+.home-info {
+    position: absolute;
+    z-index: 999;
+    height: 300px;
+    width: 400px;
+    top: calc(50% - 100px);
+    left: calc(50% - 200px);
+    color: white;
+    text-align: center;
+}
+
+.home-header {
+    font-weight: 900;
+    font-size: 3rem;
+    line-height: 90px;
+}
+
+.main-shop-btn {
+    color: white;
+    background-color: black;
+    opacity: 0.5;
+    border: none;
+    margin-top: 20px;
+}
+
+.main-shop-btn:hover {
+    opacity: 0.9;
 }
