--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,4 +16,9 @@ button {
     border-radius: 5px;
     padding: 8px;
     box-shadow: 1px 1px 1px;
+    
+}
+
+button:hover {
+    transform: translateY(-3px);
 }
