--- a/src/css/home.css
+++ b/src/css/home.css
@@ -60,13 +60,34 @@
 }
 
 .main-shop-btn {
-    color: white;
-    background-color: black;
-    opacity: 0.5;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    opacity: 0.7;
     border: none;
     margin-top: 20px;
 }
 
 .main-shop-btn:hover {
     opacity: 0.9;
+}
+
+@media (max-width: 600px) {
+    .home-header, .home-sub {
+       width: 250px
+    }
+    .home-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: calc(50% - 200px);
+        height: 400px;
+    }
+    .home-header {
+        line-height: 60px;
+    }
+    .home-sub {
+        margin-top: 10px;
+    }
+
 }
