media query for change in summary border radius

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -140,5 +140,9 @@ td {
     .adj-btns > * {
         margin: 3px
     }
+    .summary {
+        border-bottom-left-radius: 15px;
+        border-top-right-radius: 0px;
+    }
     
 }
