--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,11 +1,11 @@
 .carousel {
   position: relative;
   height: 100vh;
-  
   overflow: hidden;
   overflow-y: hidden;
   margin: auto;
 }
+
 
 .carousel img {
   position: absolute;
@@ -13,6 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: hidden;
   object-fit: cover; 
   opacity: 0;
   transition: opacity 1s ease-in-out;
@@ -45,7 +46,6 @@
 .home-info {
     position: absolute;
     z-index: 999;
-    height: 300px;
     width: 400px;
     top: calc(50% - 100px);
     left: calc(50% - 200px);
@@ -64,11 +64,20 @@
     background-color: rgb(255, 255, 255);
     opacity: 0.7;
     border: none;
-    margin-top: 20px;
+    border-radius: 5px;
+    padding: 8px;
+    box-shadow: 1px 1px 1px;
+    display: inline-block;
+}
+
+.home-info div:last-child {
+    margin-top: 30px;
 }
 
 .main-shop-btn:hover {
     opacity: 0.9;
+    color: #113f67;;
+    transform: translateY(-3px);
 }
 
 @media (max-width: 600px) {
