--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,28 +1,28 @@
 .carousel {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-  overflow-y: hidden;
-  margin: auto;
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+    overflow-y: hidden;
+    margin: auto;
 }
 
 
 .carousel img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow-y: hidden;
-  object-fit: cover; 
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-  z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 0;
 }
 
 .carousel img.active {
-  opacity: 0.7;
-  z-index: 1;
+    opacity: 0.7;
+    z-index: 1;
 }
 
 @media (max-width: 900px) {
@@ -30,6 +30,7 @@
         transform: translateX(-18%);
         overflow-x: visible;
     }
+
     .img-0 {
         transform: translateX(-15%);
         overflow-x: visible;
@@ -37,7 +38,7 @@
 }
 
 @media (max-width: 500px) {
-     .img-2 {
+    .img-2 {
         transform: translateX(-60%);
         overflow-x: visible;
     }
@@ -76,14 +77,18 @@
 
 .main-shop-btn:hover {
     opacity: 0.9;
-    color: #113f67;;
+    color: #113f67;
+    ;
     transform: translateY(-3px);
 }
 
 @media (max-width: 600px) {
-    .home-header, .home-sub {
-       width: 250px
+
+    .home-header,
+    .home-sub {
+        width: 250px
     }
+
     .home-info {
         display: flex;
         flex-direction: column;
@@ -92,9 +97,11 @@
         top: calc(50% - 200px);
         height: 400px;
     }
+
     .home-header {
         line-height: 60px;
     }
+
     .home-sub {
         margin-top: 10px;
     }
