--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -12,10 +12,12 @@
     .item-card {
         max-width: 350px;
     }
+
     .shop-grid {
         justify-content: center;
-    }  
+    }
 }
+
 main {
     background-color: #38598b;
 }
@@ -25,7 +27,7 @@ main {
     margin-top: 20px;
 }
 
-.shop-grid::after {  
+.shop-grid::after {
     content: '';
     display: block;
     height: 50px;
@@ -36,34 +38,34 @@ main {
     padding: 0 15px;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 2px 2px 2px ;
+    box-shadow: 2px 2px 2px;
 }
 
 .item-img {
-  width: 100%;         
-  height: 200px;       
-  display: flex;
-  align-items: center;
-  background-color: white;
-  justify-content: center;
-  overflow: hidden;    
-  
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    justify-content: center;
+    overflow: hidden;
+
 }
 
 .item-img img {
     background-color: transparent;
-  max-width: 100%;
-  scale: 0.8;
-  max-height: 100%;
-  object-fit: contain;   
+    max-width: 100%;
+    scale: 0.8;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 
-.atc-cont, .cart-adjust-cont {
+.atc-cont,
+.cart-adjust-cont {
     display: flex;
     align-items: center;
     gap: 7px
-
 }
 
 .atc-cont {
@@ -77,29 +79,30 @@ main {
     opacity: 0;
     transition: opacity 0.3s ease-out;
     color: green
-
 }
+
 .visible {
     opacity: 1;
 }
 
 .loader {
-    position:absolute;
+    position: absolute;
     top: calc(50% - 20px);
     left: calc(50% - 20px);
     width: 40px;
     height: 40px;
     border-radius: 50%;
     border: 6px solid white;
-    
+
     border-top: 6px solid #a2a8d3;
     animation: load 1s ease-in-out none infinite;
 }
 
-@keyframes load {   
+@keyframes load {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
